--- a/index.ipynb
+++ b/index.ipynb
@@ -249,12 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hometown = 'NYC'\n",
-    "ho"
+    "hometown = 'NYC'"
    ]
   },
   {
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +274,7 @@
        "'NYC'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
